--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ class="bold">reading</span>
  <h3>COLLAGE:</h3>
  <p>Check out my university: <a href=https://www.gitam.edu/academics/gitamcampuses/bengaluru-campus target="_blank">Gitam University</a></p>
 
+ <img src="1.jpg" style="height:30px;width:auto">
+
  <h3>Contact Me</h3>
  <form action="#" method="post">
  <label for="name">Name:</label><br>
